--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 											<p> Organizar e liderar cerimônias ágeis, como stand ups diários, planejamento de sprint, revisões e retrospectivas de sprint facilitando eventos de equipe para obter o máximo de engajamento e desempenho. Gerenciar projetos de tecnologia, continuidade de negócios, desenvolvimento de software,
 												garantia da qualidade e operações de TI.</p>
 
-											<h2 id="content">1.7+ anos como Gerente de Projetos Agile</h2>
+											<h2 id="content">2 anos como Gerente de Projetos Agile</h2>
 											<p> Acompanhamento de indicadores do time e estratégicos da organização.Formação e treinamento de times, bem como áreas da organização a fim de amadurecê-los dentro dos princípios ágeis.</p>
 
 											<h2 id="content">5+ anos como Gerente de T.I. </h2>
 											<p> Gerenciar todas as ações de gestão dos projetos de tecnologia da informação na área de serviços em TI, negócios e Implementação de infraestrutura de TI.</p>
 
-											<h2 id="content">1.6 anos como Gerente de Projetos em Tecnologia</h2>
+											<h2 id="content">2 anos como Gerente de Projetos em Tecnologia</h2>
 											<p> Gerencia as atividades da área de Tecnologia da Informação, envolvendo a elaboração de projetos, implantação, racionalização e redesenho de processos, incluindo desenvolvimento e integração de sistemas.</p>
 
 											<h2 id="content">5+ anos como Gerente de T.I.</h2>
