--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 									<div class="content">
 										<header>
 											<h3>Olá, seja muito bem-vindo (a) ao meu portfólio de <br />
-											projetos de Ciência de Dados, fico muito feliz com sua visita ao meu perfil.</h3>
+											projetos de ciência de dados, fico muito feliz com sua visita ao meu perfil.</h3>
 										</header>
-										<p>Relacionado as minhas habilidades que demonstro para resolver problemas de negócio utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.
-										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados, Gerenciamento de Projetos e Transformação Digital. <br/> E você pode entrar em contato comigo através dos links final da página.</p>
+										<p>Relacionado as minhas habilidades para resolver problemas de negócio, utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.
+										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados, Gerenciamento de Projetos e Transformação Digital. <br/> </p>
+										<p>E você pode entrar em contato comigo através dos links final da página.</p>
 									</div>
 									<span class="image object">
 										<img src="images/profile_picture.jpg" alt="" />
@@ -56,11 +57,11 @@
 										<!-- Content -->
 
 											<h3 id="content">Meu nome é Tony Douglas</h3>
-											<p> Sou formado em Matemática Computacional e trabalho como Agile Coach com foco em Gerencimaneto de Projetos.</p>
+											<p> Sou formado em Matemática Computacional e trabalho como Agile Coach com foco em Gerenciamento de Projetos.</p>
 											<p> Com conhecimentos em Facilitação visando a junção entre a áreas de Negócios e TI. </p>
-											<p> E juntos podemos otimizar a comunicação, provendo motivação, transparência, confiança nos dados que utilizamos agindo como facilitador das mudanças organizacionais, comportamentais</p>
-											<p> Trabalho em projetos envolvendo Ciência de Dados, para adquirir experiência na solução de problemas de negócio e o domínio sobre as ferramentas de análise de dados.</p>
-											<p> E porque não buscar uma oportunidade de trabalhar profissionalmente como Cientista de Dados unindo toda a experiência em projetos, agilidade, ciência de dados, liderando times ao longos dos anos para melhorarndo a tomada de decisão, através da construção de soluções usando dados, facilitando a integração e concepção dos Projetos.</p>
+											<p> E juntos podemos otimizar a comunicação, transparência, confiança nos dados que utilizamos agindo como facilitador das mudanças organizacionais e comportamentais.</p>
+											<p> Trabalho em projetos envolvendo ciência de dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.</p>
+											<p> E porque não buscar uma oportunidade de trabalhar profissionalmente como Cientista de Dados unindo toda a experiência em projetos, agilidade, ciência de dados, liderando times ao longo dos anos para melhorar a tomada de decisão, através da construção de soluçõe, integração e concepção dos Projetos.</p>
 
 									</section>
 
