--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											<p> Com conhecimentos em Facilitação visando a junção entre a áreas de Negócios e TI. </p>
 											<p> E juntos podemos otimizar a comunicação, transparência, confiança nos dados que utilizamos agindo como facilitador das mudanças organizacionais e comportamentais.</p>
 											<p> Trabalho em projetos envolvendo ciência de dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.</p>
-											<p> E porque não buscar uma oportunidade de trabalhar profissionalmente como Cientista de Dados unindo toda a experiência em projetos, transformação digital, agilidade e liderando muitos times ao longo dos anos, através da construção de soluções, desenvolvimento, integração de sistemas.</p>
+											<p> E porque não buscar uma oportunidade de trabalhar profissionalmente como Cientista de Dados unindo toda a experiência em projetos, transformação digital, agilidade prevendo tendências e comportamentos de mercado, possibilitando o desenvolvimento da melhor estratégia para a organização .</p>
 
 									</section>
 
