--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 											<h3>Olá, seja muito bem-vindo (a) ao meu portfólio de <br />
 											projetos de ciência de dados, fico muito feliz com sua visita ao meu perfil.</h3>
 										</header>
-										<p>Relacionado as minhas habilidades para resolver problemas de negócio, utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.
-										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados, Gerenciamento de Projetos e Transformação Digital. <br/> </p>
+										<p>Relacionado as minhas habilidades para resolver problemas de negócio, utilizando conceitos e ferramentas da ciência de dados, através de projetos com dados públicos.
+										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a ciência de dados, Gerenciamento de Projetos e Transformação Digital. <br/> </p>
 										<p>E você pode entrar em contato comigo através dos links final da página.</p>
 									</div>
 									<span class="image object">
